--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
     "start": "medusa develop"
   },
   "dependencies": {
+    "@medusajs/cache-inmemory": "^2.0.0-snapshot-20230309082112",
+    "@medusajs/event-bus-local": "^0.0.0",
     "@medusajs/medusa": "^1.6.0",
     "@medusajs/medusa-cli": "^1.3.3",
     "medusa-fulfillment-manual": "^1.1.31",
-    "@medusajs/event-bus-local": "^0.0.0",
-    "@medusajs/cache-inmemory": "^0.0.0",
     "medusa-interfaces": "^1.3.3",
     "medusa-payment-manual": "^1.0.16",
     "medusa-payment-stripe": "^1.1.45",
-    "typeorm": "^0.2.36"
+    "typeorm": "^0.3.12"
   },
   "repository": "https://github.com/medusajs/medusa-starter-default.git",
   "keywords": [
