--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "start": "medusa develop"
   },
   "dependencies": {
-    "@medusajs/cache-inmemory": "^2.0.0-snapshot-20230309082112",
-    "@medusajs/event-bus-local": "^0.0.0",
-    "@medusajs/medusa": "^1.6.0",
-    "@medusajs/medusa-cli": "^1.3.3",
+    "@medusajs/medusa": "^1.3.1",
+    "@medusajs/medusa-cli": "^1.3.0",
     "medusa-fulfillment-manual": "^1.1.31",
-    "medusa-interfaces": "^1.3.3",
+    "@medusajs/event-bus-local": "^0.0.0",
+    "@medusajs/cache-inmemory": "next",
+    "medusa-interfaces": "^1.3.0",
     "medusa-payment-manual": "^1.0.16",
-    "medusa-payment-stripe": "^1.1.45",
+    "medusa-payment-stripe": "^1.1.38",
+    "mongoose": "^5.13.3",
     "typeorm": "^0.3.12"
   },
   "repository": "https://github.com/medusajs/medusa-starter-default.git",
@@ -28,8 +29,8 @@
     "medusa"
   ],
   "devDependencies": {
-    "@babel/cli": "^7.18.10",
-    "@babel/core": "^7.18.10",
+    "@babel/cli": "^7.14.3",
+    "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.14.5",
     "babel-preset-medusa-package": "^1.1.19"
   }
