--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "start": "medusa develop"
   },
   "dependencies": {
-    "@medusajs/medusa": "^1.6.0",
-    "@medusajs/medusa-cli": "^1.3.0",
-    "medusa-fulfillment-manual": "^1.1.36",
-    "@medusajs/cache-inmemory": "2.0.0-snapshot-20230309082112",
+    "@medusajs/medusa": "next",
+    "@medusajs/medusa-cli": "next",
+    "medusa-fulfillment-manual": "next",
+    "@medusajs/cache-inmemory": "next",
     "@medusajs/event-bus-local": "^0.0.0",
-    "medusa-interfaces": "^1.3.3",
-    "medusa-payment-manual": "^1.0.22",
-    "medusa-payment-stripe": "^1.1.45",
+    "medusa-interfaces": "next",
+    "medusa-payment-manual": "next",
+    "medusa-payment-stripe": "next",
     "mongoose": "^5.13.3",
     "typeorm": "^0.3.12"
   },
