--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@medusajs/medusa": "^1.6.0",
+    "@medusajs/event-bus-local": "*",
     "@medusajs/medusa-cli": "^1.3.3",
     "@medusajs/cache-inmemory": "2.0.0-snapshot-20230309082112",
     "medusa-fulfillment-manual": "^1.1.31",
