--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "start": "medusa develop"
   },
   "dependencies": {
+    "@medusajs/cache-inmemory": "^2.0.0-20230320210331",
+    "@medusajs/event-bus-local": "^0.2.0-20230320210331",
     "@medusajs/medusa": "^1.6.0",
-    "@medusajs/event-bus-local": "*",
     "@medusajs/medusa-cli": "^1.3.3",
-    "@medusajs/cache-inmemory": "2.0.0-snapshot-20230309082112",
     "medusa-fulfillment-manual": "^1.1.31",
     "medusa-interfaces": "^1.3.3",
     "medusa-payment-manual": "^1.0.16",
