--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "seed": "medusa exec ./src/scripts/seed.ts",
     "start": "medusa start",
     "dev": "medusa develop",
+    "predeploy": "medusa db:migrate",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
@@ -26,6 +27,9 @@
     "@medusajs/framework": "rc",
     "@medusajs/medusa": "rc",
     "@medusajs/medusa-cli": "rc",
+    "@medusajs/cache-redis": "rc",
+    "@medusajs/event-bus-redis": "rc",
+    "@medusajs/workflow-engine-redis": "rc",
     "@mikro-orm/core": "5.9.7",
     "@mikro-orm/knex": "5.9.7",
     "@mikro-orm/migrations": "5.9.7",
